--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,14 @@
         android:theme="@style/Theme.MySound"
         tools:targetApi="31">
         <activity
-            android:name=".SongListActivity"
+            android:name=".Activity.ListPlayListActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Activity.SongListActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
