--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,13 @@
         android:theme="@style/Theme.MySound"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.PlaySongActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".Activity.ListAlbumActivity"
             android:exported="false">
             <meta-data
